# kde1-kshow

./: AUTHORS  CMakeLists.txt  Makefile.am  Makefile.in  QwViewport.cpp  QwViewport.h  README  VERSION  album.cpp  album.h  configdlg.cpp  configdlg.h  formats.cpp  formats.h  gif.cpp  infodlg.cpp  infodlg.h  jpeg.cpp  jpeg.h  jpeginc.h  kshow-0.2.1.lsm  kshow.cpp  kshow.h  kshow.kdelnk  kshow.xpm  listdlg.cpp  listdlg.h  main.cpp  main.h  mini-kshow.xpm  netpbm.cpp  netpbm.h  pixview.cpp  pixview.h  progdlg.cpp  progdlg.h
doc/: Makefile.am  Makefile.in
doc/de/: Makefile.am  Makefile.in  index-1.html  index-2.html  index-3.html  index-4.html  index-5.html  index.html
icons/: kshow.kdelnk  kshow.xpm
icons/mini/: kshow.xpm
pics/: Makefile.am  Makefile.in  back.xpm  diashow.xpm  editcopy.xpm  filenew.xpm  fileopen.xpm  forward.xpm  help.xpm  manni.xpm  newwin.xpm  next.xpm  stop.xpm  thumback.xpm  thumdialog.xpm  thumexit.xpm  thumforward.xpm  thummove.xpm
po/: Makefile.am  Makefile.in  de.gmo  de.po  fr.gmo  fr.po  hu.gmo  hu.po
toolbar/: Makefile.am  Makefile.in  diashow.xpm  thumdialog.xpm
