# Add all your pic files here
data_DATA =	manni.xpm \
		back.xpm \
		diashow.xpm \
		editcopy.xpm \
		thumexit.xpm \
		filenew.xpm \
		fileopen.xpm \
		thumdialog.xpm \
		thumforward.xpm \
		forward.xpm \
		help.xpm \
		thummove.xpm \
		newwin.xpm\
		next.xpm \
		thumback.xpm \
		stop.xpm

# This is where it will all be installed
datadir = $(kde_datadir)/kshow/pics
